<resources>
    <string name="app_name">FinalProject</string>
    <string name="Save_m">Save</string>
    <string name="Delete_m">Delete</string>
    <string name="List_m">List</string>
    <string name="Convert_m">Convert</string>
    <string name="Amount_m">Amount</string>
    <string name="to_m">To</string>
    <string name="From_m">From</string>
    <string name="Frag">Conversion info: </string>

    <string name="destination">Destination:</string>
    <string name="terminal">Terminal:</string>
    <string name="gate">Gate:</string>
    <string name="delay">Delay:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="input_airport_code">Input airport iata code</string>
    <string name="view_saved">View Saved</string>
    <string name="no_saved_flight">No Saved Flight</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="aviation_stack_flight_tracker">Aviation Stack Flight Tracker</string>
    <string name="view_saved_flight">Saved Flights</string>
    <string name="press_back_again_to_exit_the_app">Press back again to exit the Flight Tracker</string>
    <string name="network_error">Network error!</string>
    <string name="flight_date">Flight Date:</string>
    <string name="airline_name">Airline Name:</string>
    <string name="aircraft_iata">Aircraft IATA:</string>
    <string name="flight_number">Flight Number:</string>
    <string name="flight_status">Flight Status:</string>
    <string name="invalid_airport_code_please_3_letter_code">Invalid airport code,please enter 3-letter code!</string>
    <string name="ok">ok</string>
    <string name="hint">Hint</string>
    <string name="empty">empty</string>
    <string name="detail">Detail</string>
    <string name="already_saved">Already saved</string>
    <string name="saved_flight">Saved Flight</string>
    <string name="flight_detail">Flight detail</string>
    <string name="cancel">Cancel</string>
    <string name="delete_flight">Delete Flight</string>
    <string name="do_you_want_to_delete_this_flight_information">Do you want to delete this flight information?</string>
    <string name="help_content">"1.The airport iata code is a 3-letter code representing the airport.For instance, YOW is for Ottawa, YYZ is Toronto, YUL is Montreal.\n2.Click on the \"Settings\" in the top right corner of the menu to open the application settings.\n3.Click on \"Saved Flights\" in the top right corner of the menu to view the saved flight information. \n4.Click on an item in the list to view the details of the flight. "</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="zhCN">简体中文</string>
</resources>