<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#E9EFF3"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/destination"
        app:layout_constraintEnd_toStartOf="@+id/tv_destination"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/terminal"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/gate"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/delay"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_destination"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_terminal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/tv_destination"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_destination"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/tv_gate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/tv_terminal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_terminal"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_delay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/tv_gate"
        app:layout_constraintStart_toStartOf="@+id/tv_gate"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/flight_date"
        app:layout_constraintEnd_toStartOf="@+id/tv_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/airline_name"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/aircraft_iata"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/flight_number"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="#E8EEF2"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/flight_status"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_airline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_flight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_aircraft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>